# sweat-claim

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: push.yml  test.yml
contract/: Cargo.toml
contract/src/: lib.rs  migration.rs
contract/src/asset/: api.rs
contract/src/auth/: api.rs  tests.rs
contract/src/burn/: api.rs  tests.rs
contract/src/claim/: api.rs  claim_all_api.rs  mod.rs  model.rs  tests.rs
contract/src/claim/api/: mod.rs  single.rs  total.rs
contract/src/clean/: api.rs  tests.rs
contract/src/common/: asserts.rs  mod.rs  tests.rs
contract/src/config/: api.rs  mod.rs  tests.rs
contract/src/receiver/: mod.rs
contract/src/record/: api.rs  mod.rs  tests.rs
contract/src/record/model/: legacy.rs  mod.rs  v1.rs  versioned.rs
integration-tests/: Cargo.toml
integration-tests/src/: common.rs  context.rs  lib.rs  prepare.rs
integration-tests/src/interface/: claim_contract.rs  claim_contract_interface.rs  common.rs  ft_contract.rs  ft_contract_interface.rs  mod.rs
integration-tests/src/measure/: mod.rs  record_batch_for_hold.rs
model/: Cargo.toml
model/src/: account_record.rs  api.rs  event.rs  lib.rs
res/: sweat.wasm  sweat_claim.wasm
scripts/: build-integration.sh  build.sh  lint.sh
