[workspace]

resolver = "2"

default-members = ["contract"]
members = ["contract", "integration-tests", "model"]

[workspace.dependencies]
fake = "2.9.2"
rand = "0.8.5"
anyhow = "1.0.79"
tokio = "1.36"

nitka = "0.2.0"
nitka-proc = "0.2.0"

claim-model = { path = "model" }
sweat-model = { git = "https://github.com/sweatco/sweat-near", rev = "19063e79c4795ff67d6971fe2ca18be31c961011" }

near-workspaces = "0.10.0"
near-self-update-proc = "0.0.1"

near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
near-contract-standards = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }

[patch.crates-io]
near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
