[package]
name = "sweat_claim"
version = "1.0.2"
authors = ["Sweat Economy"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["release"]
release = ["claim-model/release-api"]
integration-test = ["claim-model/release-api", "claim-model/integration-methods"]
integration-api = ["claim-model/integration-api"]

[dependencies]
near-sdk = { workspace = true }

claim-model = { workspace = true }
