[package]
name = "integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "integration_tests"

[dev-dependencies]
near-workspaces = { workspace = true }
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

near-units = "0.2.0"
borsh = "1.3.0"
maplit = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
pkg-config = "0.3.28"

[dependencies]
async-trait = { workspace = true }

claim-model = { workspace = true, features = ["integration-test"] }
sweat-model = { workspace = true, features = ["integration-test"] }
integration-utils = { workspace = true }
