[package]
name = "claim-model"
version = "1.0.0"
edition = "2021"

[lib]
name = "claim_model"

[features]
default = []
integration-methods = []
integration-test = ["dep:nitka", "dep:near-workspaces"]
integration-api = ["dep:nitka", "dep:near-workspaces"]
release-api = []

[dependencies]
anyhow = { workspace = true }
near-sdk = { workspace = true }

nitka = { workspace = true, optional = true }
nitka-proc = { workspace = true }

near-workspaces = { workspace = true, optional = true }
